static/css/layout.css
/* ... */
article,
aside,
details,
figcaption,
figure, 
footer,
header,
hgroup,
menu,
nav,
section {
	display: block;
}
ol,
ul {
	list-style: none;
}
blockquote,
q {
	quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/*
	+-----------------------+
	|  Links				|
	+-----------------------+
*/
a:link,
a:active,
a:visited {
	text-decoration: none;
	font-weight: 700;
	color: #4591ED;
	transition: color 0.2s ease;
}
a:hover {
	color: #00C9FF;
	cursor: pointer;
}



/*
	+-----------------------+
	|  Layout				|
	+-----------------------+
*/
.main-nav,
.main-nav--links,
.product-switcher,
.product-switcher--menu,
.product-sidebar,
.page-title,
.page-content,
.main-nav--hamburger,
.documentation-home {
	position: fixed;
}
.main-nav--links,
.product-switcher--menu {
	z-index: 10;
	transition: all 0.3s ease;
	overflow: hidden;
}
.main-nav,
.product-switcher,
.page-title {
	z-index: 7;
}
.product-sidebar {
	z-index: 6;
}
.page-content,
.documentation-home {
	z-index: 5;
}


/*
	Main Navigation
*/
.main-nav {
	top: 0;
	left: 0;
	height: 2.5rem;
	width: 100%;
	background-color: #1F242D;
}
.main-nav--logo {
	left: 1rem;
	height: 60%;
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	-webkit-transform: translateY(-50%);
}
.main-nav--hamburger {
	width: 2.5rem;
	height: 2.5rem;
	top: 0;
	right: 0;
}
.main-nav--hamburger-bar {
	width: 1.5rem;
	height: 2px;
	background-color: #68707C;
	border-radius: 1px;
	position: absolute;
	left: 50%;
	transition: all 0.3s ease;
}
.main-nav--hamburger:hover .main-nav--hamburger-bar {
	background-color: #fff;
}
.main-nav--hamburger-bar.top {
	top: 30%;
	transform: translate(-50%,-50%);
	-webkit-transform: translate(-50%,-50%);
}
.main-nav--hamburger-bar.middle {
	top: 50%;
	transform: translate(-50%,-50%);
	-webkit-transform: translate(-50%,-50%);
}
.main-nav--hamburger-bar.bottom {
	top: 70%;
	transform: translate(-50%,-50%);
	-webkit-transform: translate(-50%,-50%);
}
.main-nav--hamburger.open .main-nav--hamburger-bar.top {
	top: 50%;
	transform: translate(-50%,-50%) rotate(45deg);
	-webkit-transform: translate(-50%,-50%) rotate(45deg);
}
.main-nav--hamburger.open .main-nav--hamburger-bar.middle {
	opacity: 0;
}
.main-nav--hamburger.open .main-nav--hamburger-bar.bottom {
	top: 50%;
	transform: translate(-50%,-50%) rotate(-45deg);
	-webkit-transform: translate(-50%,-50%) rotate(-45deg);
}

/*
	Main Navigation Links
	(Links pointing back to influxdata.com)
*/
.main-nav--links {
	top: 2.5rem;
	width: 50%;
	right: 0;
	height: calc(100% - 2.5rem);
	background-color: #2C323D;
	transform: translateX(100%);
	-webkit-transform: translateX(100%);
	padding-top: 1rem;
}
a.main-nav--link:link,
a.main-nav--link:visited,
a.main-nav--link:active {
	width: 100%;
	display: block;
	padding: 1rem;
	text-decoration: none;
	font-weight: 600;
	color: #E6E9EC;
}
a.main-nav--link:hover {
	color: #fff;
}
/*
	Product Switcher
*/
.product-switcher--menu {
	top: 2.5rem;
	width: 50%;
	left: 0;
	height: calc(100% - 2.5rem);
	background-color: #373D49;
	transform: translateX(-100%);
	-webkit-transform: translateX(-100%);
	padding: 1rem;
}
.main-nav--links.show,
.product-switcher--menu.show {
	transform: translateX(0);
	-webkit-transform: translateX(0);
}
.product-switcher {
	top: 2.5rem;
	left: 0;
	width: 100%;
	height: 3rem;
	background-color: #262B35;
}
.product-switcher--current {
	width: auto;
	display: inline-block;
	line-height: 3rem;
	color: #fff;
	font-size: 1.25em;
	font-weight: 700;
	margin-left: 1rem;
	font-family: 'Klavika-Bold';
}
.product-switcher--toggle {
	display: none;
	position: absolute;
}
.product-switcher--title {
	width: 100%;
	margin-top: 1rem;
	color: #fff;
	font-weight: 900;
	margin-bottom: 1rem;
}
a.product-switcher--item:link,
a.product-switcher--item:active,
a.product-switcher--item:visited {
	display: block;
	text-decoration: none;
	width: 100%;
	color: #A5ACB5;
	background-color: #2C323D;
	border-radius: 4px;
	margin-top: 2px;
	padding: 1em;
	transition:
		background-color 0.2s ease,
		color 0.2s ease;
}
a.product-switcher--item:hover {
	background-color: #454C59;
	color: #fff;
}
/*
	Page Title
*/
.page-title {
	top: calc(2.5rem + 3rem);
	left: 0;
	width: 100%;
	height: 3rem;
	background-color: #373D49;
	background-position: center center;
	background-size: cover;
	background-repeat: no-repeat;
}
.page-title--toggle {
	position: absolute;
	top: 0;
	left: 0;
	width: 3rem;
	height: 3rem;
	transition: all 0.3s ease;
	text-align: center;
	color: #fff;
	font-weight: 900;
	line-height: 2.9rem;
	font-size: 1rem;
}
.page-title--toggle.open {
	transform: rotate(90deg);
	-webkit-transform: rotate(90deg);
}
.page-title--name {
	position: absolute;
	left: 2.625rem;
	display: block;
	width: calc(100% - 2.625rem);
	height: 3rem;
	line-height: 3rem;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	color: #fff;
	letter-spacing: -0.01em;
	font-weight: 600;
}
/*
	Page Content
*/
.page-content {
	background-color: #fff;
	top: calc(2.5rem + 3rem + 3rem);
	left: 0;
	width: 100%;
	height: calc(100% - 2.5rem - 3rem - 3rem);
	overflow-x: hidden;
	overflow-y: scroll;
	text-align: center;
	font-size: 0;
	transition: opacity 0.2s ease;
	-webkit-overflow-scrolling: touch;
}
.page-content::-webkit-scrollbar              { background-color: #fff; width: 1em; }
.page-content::-webkit-scrollbar-track        { background-color: #000; }
.page-content::-webkit-scrollbar-thumb        { border: 4px solid #fff; background-color: #000; border-radius: 0.5em; }

.page-content.hide {
	opacity: 0.2;
}
.page-content--container {
	display: inline-block;
	font-size: 1rem;
	text-align: left;
	margin: 2rem auto;
	width: calc(100% - 4rem);
}
/* ... */

